# frr-proteus

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
examples/: basic_bgp.py  evpn_bgp.py  evpn_dual_speed_host.py  evpn_experimental.py  evpn_fabric.py  internet_peering.py  minimal_bgp.py
scripts/: build_package.sh  generate_bindings.py  generate_dataclass_bindings.py
src/frr_proteus/: __init__.py  validate.py
src/frr_proteus/_generated/: __init__.py
src/frr_proteus/render/: __init__.py  _comments.py  _env.py  _heading.py  bfd.py  bgp.py  bgp_filters.py  experimental.py  filters.py  helpers.py  interfaces.py  route_map.py  system.py  vrf.py
src/frr_proteus/render/templates/: bfd.conf.j2  bgp.conf.j2  bgp_evpn_af.j2  bgp_evpn_af_experimental.j2  bgp_evpn_neighbors.j2  bgp_filters.conf.j2  bgp_neighbor_macros.j2  bgp_process.conf.j2  evpn_global.conf.j2  evpn_macros.j2  filters.conf.j2  interfaces.conf.j2  route_map.conf.j2  system.conf.j2  vrf.conf.j2
tests/: test_annotations.py  test_bindings_validation.py  test_render_bfd.py  test_render_bgp.py  test_render_bgp_evpn.py  test_render_bgp_filters.py  test_render_comments.py  test_render_evpn_experimental.py  test_render_filters.py  test_render_heading.py  test_render_interfaces.py  test_render_route_map.py  test_render_system.py  test_render_vrf.py  test_validate_object_refs.py
yang/augments/: frr-proteus-bgp-evpn.yang
yang/custom/: proteus-bfd.yang  proteus-bgp-evpn-experimental.yang  proteus-bgp-evpn.yang  proteus-bgp-filter.yang  proteus-bgp.yang  proteus-configuration-metadata.yang  proteus-filter.yang  proteus-interface.yang  proteus-route-map.yang  proteus-system.yang  proteus-types.yang  proteus-vrf.yang
