[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "frr-proteus"
version = "0.1.0"
description = "Generate FRR daemon text configuration from structured Python config data, using FRR's YANG models as the data schema."
requires-python = ">=3.9"
dependencies = [
    "pyangbind>=0.8.7",
    "jinja2>=3",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
frr_proteus = ["render/templates/*.j2"]
