[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "frr-proteus"
version = "0.1.0"
description = "Generate FRR daemon text configuration from structured Python config data, using FRR's YANG models as the data schema."
requires-python = ">=3.9"
# pyangbind (our fork, the pyangbind/ submodule) is a codegen-time tool
# only -- the generated bindings are plain stdlib dataclasses with no
# runtime dependency on it.
dependencies = [
    "jinja2>=3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
frr_proteus = ["render/templates/*.j2", "py.typed"]
