[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "frr-proteus"
version = "0.1.0"
description = "Generate FRR daemon text configuration from structured Python config data, using FRR's YANG models as the data schema."
requires-python = ">=3.12"
# pyangbind (our fork, the pyangbind/ submodule) is a codegen-time tool
# only -- the generated bindings are plain stdlib dataclasses with no
# runtime dependency on it.
dependencies = [
    "jinja2>=3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]
# Codegen-time only. pyang is the pyang framework; the pyangbind fork that
# carries the `pybind-dataclass` plugin is a local path submodule, so install
# it separately and editable: `pip install -e ".[dev,codegen]" -e ./pyangbind`.
# Neither is imported by src/frr_proteus -- only by scripts/generate_bindings.py
# -- so a single venv is fine; they can't leak into the runtime dep set.
codegen = [
    "pyang",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
frr_proteus = ["render/templates/*.j2", "py.typed"]
